Added .getDeclaredConstructor().newInstance() as Java 9 deprecates .newInstance()